[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftl2-iac-loop"
version = "0.1.0"
description = "AI reconciliation loop for FTL2 — observe, reason, act, learn"
requires-python = ">=3.13"
dependencies = [
    "ftl2 @ git+https://github.com/benthomasson/faster-than-light2",
    "linode_api4",
    "segment-analytics-python>=2.3.0",
    "textual>=0.50.0",
]

[project.scripts]
ftl2-iac-loop = "ftl2_iac_loop:cli"

[tool.hatch.build.targets.wheel]
packages = ["ftl2_iac_loop.py", "ftl2_iac_loop_tui.py"]

[tool.hatch.metadata]
allow-direct-references = true
